chore(updateStatus): send email to user for appointment-status update
